--- a/frontend_member/tsconfig.app.json
+++ b/frontend_member/tsconfig.app.json
@@ -1,4 +1,5 @@
 {
+  "extends": "./tsconfig.json",
   "compilerOptions": {
     "tsBuildInfoFile": "FFWPU-Member-Diretory/node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "target": "ES2022",
@@ -23,5 +24,6 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["frontend_member/src"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules"]
 }
