--- a/frontend_member/tsconfig.app.json
+++ b/frontend_member/tsconfig.app.json
@@ -23,5 +23,6 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["frontend_member/src"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules"]
 }
